# VoiceChange

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/nan/voicechange/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common_platform.cpp  effect_fix.cpp  play_sound.cpp
app/src/main/java/com/nan/voicechange/: MainActivity.java  VoiceEffectUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/nan/voicechange/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
